--- a/test/index.html
+++ b/test/index.html
@@ -1,3 +1,10 @@
+The reason the **Garage** and **Storage** pages are crashing is a specific error in the `getStorageStats` calculator. It tries to read your crop inventory to calculate silo fullness, but if your save file is missing the `consumables` data (which happens during a version update or glitch), it crashes the entire view.
+
+I have fixed the `getStorageStats` function to be 100% crash-proof, even if data is missing.
+
+Here is the **Fixed Code**. Copy this entire block.
+
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -121,7 +128,7 @@
 
         const DAY_MS = 86400000;
         const HOUR_MS = 3600000;
-        const SAVE_KEY = 'jersey_roots_v26_10_STABLE'; 
+        const SAVE_KEY = 'jersey_roots_v26_11_STABLE'; 
         const CLOUD_COLLECTION = 'jersey_roots_saves';
 
         const SERVICE_INTERVAL = 24; 
@@ -933,6 +940,22 @@
                 });
             };
 
+            // --- FIXED HELPER FOR GARAGE ---
+            const getStorageStats = () => {
+                const cons = gameState.consumables || {}; 
+                let cropUsed = 0; 
+                Object.keys(CROPS).forEach(k => cropUsed += (cons[k.toLowerCase()]||0));
+                let grainCap = 0, machineCap = 0, fuelCap = 0;
+                (gameState.facilities||[]).forEach(f => {
+                    const def = BUILDINGS[f.key];
+                    if(def && def.category === 'Storage') { if(def.type === 'Silo') grainCap += def.capacity; else machineCap += def.capacity; }
+                    if(def && def.category === 'Infrastructure') fuelCap += def.capacity;
+                });
+                if(grainCap === 0) grainCap = 5000; if(fuelCap === 0) fuelCap = 100;
+                if(machineCap === 0) machineCap = 1;
+                return { cropUsed, grainCap, machineCap, machineUsed: (gameState.inventory||[]).length, fuelCap };
+            };
+
             // --- RENDER SECTIONS ---
             const renderDash = () => (
                 <div className={`space-y-6 pb-safe ${gameState.snowLevel>0?'snow-bg':''} ${gameState.weather==='Rain'?'rain-bg':''}`}>
@@ -1325,9 +1348,11 @@
                         <div className="grid grid-cols-1 gap-4">
                             {(gameState.inventory || []).filter(i => i.hours !== undefined).map(i => {
                                 const activeJob = getJobProgress(i.uid);
+                                const def = getEq(i.itemId);
+                                if (!def) return null;
                                 return (
                                     <div key={i.uid} className="glass-panel p-4">
-                                        <div className="text-white font-bold">{getEq(i.itemId)?.name}</div>
+                                        <div className="text-white font-bold">{def.name}</div>
                                         <div className="text-xs text-slate-400">Cond: {Math.floor(i.condition)}%</div>
                                         
                                         {activeJob ? (
@@ -1481,7 +1506,7 @@
                     
                     <div className="text-center text-[10px] text-slate-600 font-mono">
                         UID: {currentUser.uid}<br/>
-                        Version: 26.10 Mobile
+                        Version: 26.11 Mobile
                     </div>
                 </div>
             );
@@ -1737,4 +1762,3 @@
     </script>
 </body>
 </html>
-
